--- a/index.html
+++ b/index.html
@@ -5,6 +5,13 @@
 <meta name="robots" content="noindex, nofollow, noarchive, nosnippet, noimageindex" />
 </head>
 <body>
-ら<strong>x</strong>
+  ら<strong>x</strong>
+
+  <div>
+    <label for="pass">Password</label>
+    <input type="password" id="pass" name="password" minlength="8" required />
+    <input type="submit" value="Proceed" />
+  </div>
+
 </body>
 </html>
